updated travis ci with moving to sportman directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ node_js:
 cache:
   directories:
   - node_modules
+before_script: cd sportman
 script:
+  - npm install
   - npm test
   - npm run build
 deploy:
