--- a/sportman/package.json
+++ b/sportman/package.json
@@ -2,6 +2,7 @@
   "name": "sportman",
   "version": "0.1.0",
   "private": true,
+  "home":"http://A-T-Organisation.github.io/sportManager",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
